Add slider interface, model presenter, view

--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,9 @@
     <title>Slider</title>
     </script>
   </head>
-  <body></body>
+  <body>
+    <div class="slider__wrapper">
+
+    </div>
+  </body>
 </html>
