Change handle interface: add updateModel fro IHandlePresenter, IHandlePresenter, ISliderPresenter, Add calcValueByPos (...etc calc), render for Slider in parent

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
     </script>
   </head>
   <body>
-    <div class="slider__wrapper">
-
+    <div class="block">
+      <div class="slider__wrapper">
+      </div>
     </div>
   </body>
 </html>
