Add tests for view, fix cleanVeiws for dots, marks

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div class="block">
-      <div class="slider__wrapper">
-      </div>
+      <div class="slider__wrapper1"></div>
+      <div class="slider__wrapper2"></div>
     </div>
   </body>
 </html>
